force-app/main/default/objects/KimbleOne__CostGenerationModel__c/KimbleOne__CostGenerationModel__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Cost Generation Model</label>
    <nameField>
        <label>CostGenerationModel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Generation Models</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>