force-app/main/default/objects/KimbleOne__CostGenerationModel__c/fields/KimbleOne__Enum__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Enum__c</fullName>
    <label>Enum</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>