force-app/main/default/objects/KimbleOne__CostGenerationModel__c/fields/KimbleOne__IsExpenseGenerated__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsExpenseGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expense Generated</label>
    <type>Checkbox</type>
</CustomField>