force-app/main/default/objects/KimbleOne__CostGenerationModel__c/fields/KimbleOne__IsMilestoneGenerated__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsMilestoneGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Milestone Generated</label>
    <type>Checkbox</type>
</CustomField>